Assignment-1/k8s-manifests/api-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api1
  namespace: two
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api1
  template:
    metadata:
      labels:
        app: api1
    spec:
      containers:
      - name: api1
        image: jignyasamishra/api1:latest
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: api-storage
          mountPath: /app/data
      volumes:
      - name: api-storage
        persistentVolumeClaim:
          claimName: api-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api2
  namespace: two
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api2
  template:
    metadata:
      labels:
        app: api2
    spec:
      containers:
      - name: api2
        image: jignyasamishra/api2:latest
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: api-storage
          mountPath: /app/data
      volumes:
      - name: api-storage
        persistentVolumeClaim:
          claimName: api-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: api1-service
  namespace: two
spec:
  selector:
    app: api1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: api2-service
  namespace: two
spec:
  selector:
    app: api2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
