Assignment-1/k8s-manifests/api1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api1
  namespace: myapp-namespace
  labels:
    app: api1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api1
  template:
    metadata:
      labels:
        app: api1
    spec:
      containers:
      - name: api1
        image: jignyasamishra/api1:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: api1
spec:
  selector:
    app: api1
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
