Assignment-1/k8s-manifests/api2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api2
  namespace: one
  labels:
    app: api2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api2
  template:
    metadata:
      labels:
        app: api2
    spec:
      containers:
      - name: api2
        image: jignyasamishra/api2:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: api2
  namespace: one
spec:
  selector:
    app: api2
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
